kube-templates/api/overlays/local/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        image: api
        ports:
        - containerPort: 1337
        volumeMounts:
          - name: local-src
            mountPath: /srv/app
      volumes:
        - name: local-src
          hostPath:
            type: Directory
            path: /host_files/src/backend
